minor spacing fix with basichyper in line styling

--- a/src/css/Home.module.css
+++ b/src/css/Home.module.css
@@ -68,7 +68,7 @@
 
 @media (max-width: 768px) {
     .basichyper {
-        margin-right: 0;
+        margin-right: 0px;
     }
     .message {
         /* margin-left: 1rem; */
